[package]
name = "jiffy2toggl"
version = "0.1.0"
edition = "2024"

[dependencies]
serde_json = "1.0.140"
itertools = "0.14.0"
serde = { version = "1.0.219", features = ["derive"] }
csv = "1.3.1"
chrono = "0.4.40"
chrono-tz = "0.10.1"
log = "0.4.26"
anyhow = "1.0.97"
env_logger = "0.11.7"
clap = { version = "4.5.32", features = ["derive"] }
